2007-03-05  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/GraphViz.py: Fix doc init.
	  
2007-03-05  Brian Matherly  <brian@gramps-project.org>
	* src/docgen/GtkPrint.py: Fix 0000908: GtkPrint doesn't parse if you don't 
	  have pygtk version 2.10

2007-03-05  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/GraphViz.py: Fix 0000942: Relationship graph doesn't show 
	  preferred name format

2007-03-05  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/TimeLine.py: Fix 0000943: Timeline doesn't show preferred 
	  name format

2007-03-03  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_GrampsGEDDB.py: readonly database for GEDCOM
	* src/Editors/_EditNote.py: add additional fields
	* src/RelLib/_Note.py: cleanup
	* src/DisplayTabs/_NoteModel.py: display correctly
	* src/GrampsWidgets.py: readonly support for checkbox
	* src/glade/gramps.glade: note fixes
	* src/DisplayModels/_NoteModel.py: display data correctly
	* src/GrampsDbUtils/_GedcomParse.py: cleanup, reference note fixes
	* example/gramps/example.gramps: new note support
	* example/gedcom/sample.ged: new note support

2007-03-02  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/AncestorChart2.py:
	* src/plugins/DescendChart.py:
		Make AncestorChart and DescendChart consistent in options
	* src/ReportBase/_BareReportDialog.py:
		remove get_report_extra_textbox_info
	* src/ReportBase/_CommandLineReport.py:
	* src/ReportBase/_ReportOptions.py:
		remove dispf

2007-02-28  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/GrampsDbUtils/_GedcomParse.py: Fix level of handle_source calls
	* src/GrampsDbUtils/_GedcomLex.py: fix typo

2007-02-28  Don Allingham  <don@gramps-project.org>
	* src/GrampsDbUtils/_GedcomParse.py: more enhancements
	* src/GrampsDbUtils/_GedcomChar.py: more enhancements
	* src/GrampsDbUtils/_GedcomTokens.py: more enhancements

2007-02-28  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/plugins/ImportGeneWeb.py: Adapt to new Notes api; Some parsing